# arbiturm-stylus-solidity-compare

./: .env.tmpl  .gitignore  README.md
counter/solidity/: counter.sol
counter/stylus/: Cargo.toml
counter/stylus/output/: deployment_tx_data
counter/stylus/src/: lib.rs
hash-storage-1000/solidity/: hash-storage-1000.sol
hash-storage-1000/stylus/: Cargo.toml
hash-storage-1000/stylus/src/: lib.rs  main.rs
hash-storage/solidity/: hash-storage.sol
hash-storage/stylus/: Cargo.toml
hash-storage/stylus/output/: deployment_tx_data
hash-storage/stylus/src/: lib.rs  main.rs
scripts/: cache-contract.sh  estimate-gas.sh  fund-account.sh  hs-stylus-deploy.sh  hs1000-sol-deploy.sh  hs1000-stylus-deploy.sh  nitro-testnode.sh
scripts/solidity/: hs-deploy.sh
scripts/stylus-compiled-keccak/: hs-deploy.sh  hs1000-deploy.sh
scripts/stylus-tiny-keccak/: hs-deploy.sh  hs1000-deploy.sh
