[package]
name = "stylus-hash-storage"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]

[dependencies]
alloy-primitives = { version = "0.7.6", default-features = false }
alloy-sol-types = { version = "0.7.6", default-features = false }
mini-alloc = "0.4.2"
stylus-sdk = "=0.6.0"
hex = "0.4.3"

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
tiny-keccak = ["alloy-primitives/tiny-keccak"]

[[bin]]
name = "stylus-hash-storage"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
